TEST(userId em Produtor): troca de onde userId vai ser recebido pelo metodo post
